# TecnicoFS

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  main.c  runTests.sh
client/: Makefile  tecnicofs-client-api.c  tecnicofs-client-api.h  tecnicofs-client.c
client/inputs/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
client/inputs_extra/: create.txt  teste1.txt  testsof.txt
fs/: operations.c  operations.h  state.c  state.h
inputs/: test2.txt
inputs_extra/: teste.txt
server/: Makefile  main.c
server/fs/: operations.c  operations.h  state.c  state.h
